05/12/07 Julien Dutheil
* Bug fixed in recopy of MetaOptimizer.

24/11/07 Julien Dutheil
* Another bug fixed in numerical derivatives!

13/11/07 Julien Dutheil
* New class ExponentialDiscreteDistribution + bug fixed in Gamma when classes
are not distinguishables.

24/10/07 Julien Dutheil
* Added missing references in VectorTools + new methods 'append'.

22/10/07 Julien Dutheil
* Numerical derivatives improved.
* Bug fixed in UniformK01, now works on 64bits computers! 

18/10/07 Julien Dutheil
* Added new MetaOptimizer class.

24/09/07 Julien Dutheil
* New union and intersection functions in VectorTools.

24/08/07 Julien Dutheil
* New method getParameter(name) in interface Parametrizable.

24/07/07 Julien Dutheil
* VectorTools function templates updated and simplified. New weighted
  functions (mean, var, cov, cor, etc.)
* NumTools is now a fully templated static class.

06/07/07 -*- Version 1.3.0 -*-

16/06/07 Julien Dutheil
* DataTable is now Clonable, with appropriate copy constructor and assigment
operator.

29/05/05 Julien Dutheil
* Numerical derivative improved.

26/05/07 Julien Dutheil
* Conjugate gradient method added + numerical derivative classes improved.
* New nmerical derivatives "two points" method.

04/05/07 Nicolas Galtier & Julien Dutheil
* Namespace VectorFunction is removed, and static class VectorTools used
instead.
* New container functions in VectorTools.

18/04/07 Julien Dutheil
* Optimizers are now event-driven. AbstractOptimizer class improved.
* Constraint support in class Parameter improved: pointer is no more constant,
	and the constraint may be attached or not (the default, previous behaviour).

11/04/07 Julien Dutheil
* DirectionFunction improved and in a sperate class.
  Powel optimizer modified and improved.
* Function classes augmented: new methods enableFirst(Second)OrderDerivatives.
  Numerical derivatives classes improved: faster computation, no analytical
	derivatives computed when computing function at other points.
