@@ -4,4 +4,5 @@
 #include "ExponentialDiscreteDistribution.h"
 #include "SimpleDiscreteDistribution.h"
 #include "ConstantDistribution.h"
+#include "InvariantMixedDiscreteDistribution.h"
 
